1.1
 * ID3:
  * Frame and Spec objects are not hashable.
  * COMM, USER: Accept non-ASCII (completely invalid) language codes.

1.0 - 2006.03.13
 * mutagen.FileType, an abstract container for tags and stream information.
 * MP3: A new FileType subclass for MPEG audio files.
 * FLAC:
  * Add FLAC#delete.
  * Raise correct exception when saving to a non-FLAC file.
  * FLAC#vc is deprecated in favor of FLAC#tags.
 * VComment (used by FLAC):
  * VComment#clear to clear all tags.
  * VComment#as_dict to return a dict of the tags.
 * ID3:
  * Fix typos in PRIV#_pprint, OWNE#_pprint, UFID#_pprint.
 * mutagen-pony: Try finding lengths as well as tags.
 * mutagen-inspect: Output stream information with tags.

0.9 - 2006.02.21
 * Initial release.